--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,12 @@ dependencies {
     })
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
 
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
+
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
