--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,19 +41,19 @@ dependencies {
 task clearData {
     doLast {
         new ByteArrayOutputStream().withStream { os ->
-            exec {
-                executable android.getAdbExe()
-                args "shell", "pm clear com.facebook.katana"
-                standardOutput = os
-                errorOutput = os
-            }
+//            exec {
+//                executable android.getAdbExe()
+//                args "shell", "pm clear com.facebook.katana"
+//                standardOutput = os
+//                errorOutput = os
+//            }
             exec {
                 executable android.getAdbExe()
                 args "shell", "pm clear com.tinder"
                 standardOutput = os
                 errorOutput = os
             }
-            println os.toString().trim()
+            println "Clear data:" + os.toString().trim()
 
         }
     }
